***********************************
CHANGES IN VERSION 2.8.1

NEW FEATURES

SIGNIFICANT USER-VISIBLE CHANGES

   o Update hicpro2fithic.py script. New '-r' option to set up the data resolution (F. Ay)

   o samtools >1.0 is now required

   o The -s build_contact_maps option now  directly creates matrix files from .allValidPairs file. It does not merge the .validPairs anymore. Please use -s merge_persample to merge .validPairs files and remove duplicates.

   o Update manual and correct errors

BUG FIXES

   o Fix bug for SLURM support
   
   o Fix python path in merge_valid_interaction.sh

   o Fix bug in hicpro2juicebox when chromosome names have "_"

   o Fix a bug in detection of religation events

   o Fix some issue with sort -T. This option is no longer used and replaced by setting the TMPDIR variable

***********************************
CHANGES IN VERSION 2.8.0

NEW FEATURES

   o Return bias vector after IC normalization

   o New utils hicpro2fithic.py to convert HiC-Pro output into fitHiC input

SIGNIFICANT USER-VISIBLE CHANGES

   o Update iced version (-> 0.4.0). This version includes a major changes on matrix filtering before iced normalization

   o sparseToDense.py utils. Create output file in the current folder by default
   
BUG FIXES

   o Fix bug in the help message of digest_genome.py

***********************************
CHANGES IN VERSION 2.7.9

NEW FEATURES

   o Update for capture Hi-C. New variable CAPTURE_TARGET allowing to restrict the analysis to the captured region(s)

SIGNIFICANT USER-VISIBLE CHANGES

   o Update iced version (-> 0.3.0)

   o Exit with an error if the restriction fragment file is set but not found. In the previous version, HiC-Pro automatically switched to DNAse mode.

   o Optimisation of python scripts

BUG FIXES


***********************************
CHANGES IN VERSION 2.7.8

NEW FEATURES
